implemented the project section with grid area setup for image with a link parent

--- a/index.html
+++ b/index.html
@@ -146,10 +146,118 @@
     </section>
     <!-- end of about -->
     <!-- services -->
-
+    <section class="section bg-grey">
+      <!-- Section Title -->
+      <h2 class="section-title">Service</h2>
+      <div class="underline"></div>
+      <!--End of Section Title -->
+      <div class="services-center section-center">
+        <!-- Single Service -->
+        <article class="service">
+          <i class="fas fa-code service-icon"></i>
+          <h4>web development</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+            adipisci, quas odit velit deserunt beatae ex voluptatibus provident?
+            Modi, est?
+          </p>
+        </article>
+        <!-- End of Single Service -->
+        <!-- Single Service -->
+        <article class="service">
+          <i class="fab fa-android service-icon"></i>
+          <h4>Application Development</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+            adipisci, quas odit velit deserunt beatae ex voluptatibus provident?
+            Modi, est?
+          </p>
+        </article>
+        <!-- End of Single Service -->
+        <!-- Single Service -->
+        <article class="service">
+          <i class="fab fa-sketch service-icon"></i>
+          <h4>Digital Marketing</h4>
+          <div class="underline"></div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+            adipisci, quas odit velit deserunt beatae ex voluptatibus provident?
+            Modi, est?
+          </p>
+        </article>
+        <!-- End of Single Service -->
+      </div>
+    </section>
     <!-- end of services -->
     <!-- projects -->
-
+    <section class="section projects">
+      <!-- Section Title -->
+      <h2 class="section-title">Latest work</h2>
+      <div class="underline"></div>
+      <p class="project-text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+        reiciendis ab doloribus distinctio obcaecati, magnam laboriosam? Ad
+        dignissimos assumenda doloremque, sapiente, dolor obcaecati ipsa
+        voluptas aperiam exercitationem nostrum veniam fuga.
+      </p>
+      <!--End of Section Title -->
+      <section class="section-center projects-center">
+        <!-- Single Project -->
+        <a href="index.html" class="project-1">
+          <article class="project">
+            <!-- Image -->
+            <img src="./images/project-1.jpeg" class="project-img" alt="" />
+            <!-- Info -->
+            <div class="project-info">
+              <h4>Project name</h4>
+              <p>Client name</p>
+            </div>
+          </article>
+        </a>
+        <!--End Single Project -->
+        <!-- Single Project -->
+        <a href="index.html" class="project-2">
+          <article class="project">
+            <!-- Image -->
+            <img src="./images/project-2.jpeg" class="project-img" alt="" />
+            <!-- Info -->
+            <div class="project-info">
+              <h4>Project name</h4>
+              <p>Client name</p>
+            </div>
+          </article>
+        </a>
+        <!--End Single Project -->
+        <!-- Single Project -->
+        <a href="index.html" class="project-3">
+          <article class="project">
+            <!-- Image -->
+            <img src="./images/project-3.jpeg" class="project-img" alt="" />
+            <!-- Info -->
+            <div class="project-info">
+              <h4>Project name</h4>
+              <p>Client name</p>
+            </div>
+          </article>
+        </a>
+        <!--End Single Project -->
+        <!-- Single Project -->
+        <a href="index.html" class="project-4">
+          <article class="project">
+            <!-- Image -->
+            <img src="./images/project-4.jpeg" class="project-img" alt="" />
+            <!-- Info -->
+            <div class="project-info">
+              <h4>Project name</h4>
+              <p>Client name</p>
+            </div>
+          </article>
+        </a>
+        <!--End Single Project -->
+      </section>
+    </section>
     <!-- end of projects -->
     <!-- connect -->
 
