--- a/index.html
+++ b/index.html
@@ -260,10 +260,101 @@
     </section>
     <!-- end of projects -->
     <!-- connect -->
-
+    <section class="connect">
+      <video
+        autoplay
+        muted
+        loop
+        class="video-container"
+        poster="./images/project-1.jpeg"
+      >
+        <!-- <source src="./videos/connect.mp4" type="video/mp4" /> -->
+        Sorry, Your Browser does not support this video.
+      </video>
+      <div class="video-banner">
+        <!-- Section Title -->
+        <h2 class="section-title">Let's get in touch</h2>
+        <div class="underline"></div>
+        <p class="video-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae,
+          tempora voluptatibus vero animi ipsum dolore earum assumenda
+          cupiditate, officiis minus aliquam, voluptatum inventore quis optio
+          maxime libero ad aperiam est magni reprehenderit! Repellendus, dolorem
+          numquam?
+        </p>
+        <a href="contact.html" class="btn">Contact Me</a>
+      </div>
+    </section>
     <!-- end of connect -->
     <!-- skills -->
+    <section class="section skills">
+      <!-- Section Title -->
+      <h2 class="section-title">Skills</h2>
+      <div class="underline"></div>
 
+      <div class="section-center skills-center">
+        <article>
+          <h3>Front End</h3>
+          <!-- Single Skill -->
+          <div class="skill">
+            <p>HTML/CSS</p>
+            <div class="skill-container">
+              <div class="skill-value"></div>
+              <p class="skill-text">50%</p>
+            </div>
+          </div>
+          <!-- End of Single Skill -->
+          <!-- Single Skill -->
+          <div class="skill">
+            <p>Javascript</p>
+            <div class="skill-container">
+              <div class="skill-value skill-value-70"></div>
+              <p class="skill-text skill-70">70%</p>
+            </div>
+          </div>
+          <!-- End of Single Skill -->
+          <!-- Single Skill -->
+          <div class="skill">
+            <p>React</p>
+            <div class="skill-container">
+              <div class="skill-value skill-value-80"></div>
+              <p class="skill-text skill-80">80%</p>
+            </div>
+          </div>
+          <!-- End of Single Skill -->
+        </article>
+        <article>
+          <h3>Back End</h3>
+          <!-- Single Skill -->
+          <div class="skill">
+            <p>Node JS</p>
+            <div class="skill-container">
+              <div class="skill-value"></div>
+              <p class="skill-text">50%</p>
+            </div>
+          </div>
+          <!-- End of Single Skill -->
+          <!-- Single Skill -->
+          <div class="skill">
+            <p>Php</p>
+            <div class="skill-container">
+              <div class="skill-value skill-value-70"></div>
+              <p class="skill-text skill-70">70%</p>
+            </div>
+          </div>
+          <!-- End of Single Skill -->
+          <!-- Single Skill -->
+          <div class="skill">
+            <p>Pyhton</p>
+            <div class="skill-container">
+              <div class="skill-value skill-value-80"></div>
+              <p class="skill-text skill-80">80%</p>
+            </div>
+          </div>
+          <!-- End of Single Skill -->
+        </article>
+      </div>
+    </section>
     <!-- end of skills -->
     <!-- timeline -->
 
