implemented timeline structure and blog learnt how to rotate to side of a face

--- a/index.html
+++ b/index.html
@@ -357,60 +357,173 @@
     </section>
     <!-- end of skills -->
     <!-- timeline -->
-
+    <section class="section timeline">
+      <!-- Section Title -->
+      <h2 class="section-title">Timelines</h2>
+      <div class="underline"></div>
+      <section class="section-center timeline-center">
+        <!-- Single timeline item -->
+        <article class="timeline-item">
+          <h4>2022</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            vero officia quae impedit possimus saepe alias porro dolorem aperiam
+            perspiciatis.
+          </p>
+          <span class="number">1</span>
+        </article>
+        <!-- End Single timeline item -->
+        <!-- Single timeline item -->
+        <article class="timeline-item">
+          <h4>2021</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            vero officia quae impedit possimus saepe alias porro dolorem aperiam
+            perspiciatis.
+          </p>
+          <span class="number">2</span>
+        </article>
+        <!-- End Single timeline item -->
+        <!-- Single timeline item -->
+        <article class="timeline-item">
+          <h4>2020</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            vero officia quae impedit possimus saepe alias porro dolorem aperiam
+            perspiciatis.
+          </p>
+          <span class="number">3</span>
+        </article>
+        <!-- End Single timeline item -->
+        <!-- Single timeline item -->
+        <article class="timeline-item">
+          <h4>2019</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            vero officia quae impedit possimus saepe alias porro dolorem aperiam
+            perspiciatis.
+          </p>
+          <span class="number">4</span>
+        </article>
+        <!-- End Single timeline item -->
+        <!-- Single timeline item -->
+        <article class="timeline-item">
+          <h4>2018</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            vero officia quae impedit possimus saepe alias porro dolorem aperiam
+            perspiciatis.
+          </p>
+          <span class="number">5</span>
+        </article>
+        <!-- End Single timeline item -->
+        <!-- Single timeline item -->
+        <article class="timeline-item">
+          <h4>2017</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati
+            vero officia quae impedit possimus saepe alias porro dolorem aperiam
+            perspiciatis.
+          </p>
+          <span class="number">6</span>
+        </article>
+        <!-- End Single timeline item -->
+      </section>
+    </section>
     <!--end of  timeline -->
     <!-- blog -->
+    <section class="section blog">
+      <!-- Section Title -->
+      <h2 class="section-title">Blogs</h2>
+      <div class="underline"></div>
+      <section class="section-center blog-center">
+        <!-- Single article -->
+        <article class="card">
+          <!-- Front of card -->
+          <div class="card-side card-front">
+            <img src="./images/project-1.jpeg" alt="">
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptates dolores voluptas nulla, tempore quam.</p>
+              <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="">
+              <p>7 Mins Read</p>
+            </div>
+            </div>
+            
+          </div>
+          <!-- Back of card -->
+          <div class="card-side card-back">
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </article>
+        <!-- End os Single article -->
+        <!-- Single article -->
+        <article class="card">
+          <!-- Front of card -->
+          <div class="card-side card-front">
+            <img src="./images/project-2.jpeg" alt="">
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptates dolores voluptas nulla, tempore quam.</p>
+              <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="">
+              <p>7 Mins Read</p>
+            </div>
+            </div>
+          </div>
+          <!-- Back of card -->
+          <div class="card-side card-back">
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </article>
+        <!-- End os Single article -->
+        <!-- Single article -->
+        <article class="card">
+          <!-- Front of card -->
+          <div class="card-side card-front">
+            <img src="./images/project-3.jpeg" alt="">
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptates dolores voluptas nulla, tempore quam.</p>
+              <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="">
+              <p>7 Mins Read</p>
+            </div>
+            </div>
+          </div>
+          <!-- Back of card -->
+          <div class="card-side card-back">
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </article>
+        <!-- End os Single article -->
+        <!-- Single article -->
+        <article class="card">
+          <!-- Front of card -->
+          <div class="card-side card-front">
+            <img src="./images/project-4.jpeg" alt="">
+            <div class="card-info">
+              <h4>Article Title</h4>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptates dolores voluptas nulla, tempore quam.</p>
+              <div class="card-footer">
+              <img src="./images/hero-img-small.jpeg" alt="">
+              <p>7 Mins Read</p>
+            </div>
+            </div>
+          </div>
+          <!-- Back of card -->
+          <div class="card-side card-back">
+            <a href="#" class="btn">Read More</a>
+          </div>
+        </article>
+        <!-- End os Single article -->
+      </section>
+        <!-- Single Blog article -->
 
-    <!--end of  blog -->
-    <!-- footer -->
-
-    <script src="./js/app.js"></script>
-  </body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>John Doe || Home</title>
-    <!-- font-awesome -->
-    <link
-      rel="stylesheet"
-      href="./fontawesome-free-5.12.1-web/css/all.min.css"
-    />
-    <!-- css -->
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- navbar -->
-
-    <!-- end of navbar -->
-    <!-- sidebar -->
-
-    <!-- end of sidebar -->
-    <!-- header -->
-
-    <!-- end of header -->
-    <!-- about -->
-
-    <!-- end of about -->
-    <!-- services -->
-
-    <!-- end of services -->
-    <!-- projects -->
-
-    <!-- end of projects -->
-    <!-- connect -->
-
-    <!-- end of connect -->
-    <!-- skills -->
-
-    <!-- end of skills -->
-    <!-- timeline -->
-
-    <!--end of  timeline -->
-    <!-- blog -->
-
+        <!-- End of Single Blog article -->
+      </section>
+    </section>
     <!--end of  blog -->
     <!-- footer -->
 
