--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         class="video-container"
         poster="./images/project-1.jpeg"
       >
-        <!-- <source src="./videos/connect.mp4" type="video/mp4" /> -->
+        <source src="./videos/connect.mp4" type="video/mp4" />
         Sorry, Your Browser does not support this video.
       </video>
       <div class="video-banner">
@@ -526,7 +526,32 @@
     </section>
     <!--end of  blog -->
     <!-- footer -->
-
+    <footer class="footer">
+      <ul class="social-icons">
+          <li>
+            <a href="www.twitter.com/codexive_zech" class="social-icon"
+              ><i class="fab fa-facebook"></i
+            ></a>
+          </li>
+          <li>
+            <a href="www.twitter.com/codexive_zech" class="social-icon"
+              ><i class="fab fa-twitter"></i
+            ></a>
+          </li>
+          <li>
+            <a href="www.twitter.com/codexive_zech" class="social-icon"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </li>
+          <li>
+            <a href="www.twitter.com/codexive_zech" class="social-icon"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </li>
+        </ul>
+    <p>&copy; <span id="date"></span> John Deo. All rights reserved.</p>
+    </footer>
+<!-- end of Footer -->
     <script src="./js/app.js"></script>
   </body>
 </html>
