--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John Doe || Projects</title>
+    <!-- Fav Icon -->
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
     <!-- font-awesome -->
     <link
       rel="stylesheet"
